--- a/src/app/inicio.component.html
+++ b/src/app/inicio.component.html
@@ -5,7 +5,9 @@
     <div class="corpus">
       <div class="carrusel hidden-xs">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
           <ol class="carousel-indicators">
+
 
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 
@@ -18,36 +20,30 @@
 
             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 
+
+
           </ol>
+
           <div class="carousel-inner">
-            <div class="item">
-              <img class="imagenes-Home" src="assets/img/foto1.jpg" alt="foto" />
-              <div class="carousel-caption">
-                <span></span>
-                <h4 class="portada-subtitulo"></h4>
+
+
+            <ng-template ngFor let-foto [ngForOf]="fotos" let-i="index">
+
+              <div class="item {{i===0 ? 'active' : ''}} ">
+                <img class="imagenes-Home" src="assets/img/{{ foto.urlFoto }}" alt="foto" />
+                <div class="carousel-caption">
+                  <span>{{ foto.tituloFoto }}</span>
+                  <h4 class="portada-subtitulo">{{ foto.descripcionFoto }}</h4>
+                </div>
               </div>
-            </div>
-            <div class="item active">
-              <img class="imagenes-Home" src="assets/img/foto2.jpg" alt="foto" />
-              <div class="carousel-caption">
-                <span></span>
-                <h4 class="portada-subtitulo"></h4>
-              </div>
-            </div>
-            <div class="item">
-              <img class="imagenes-Home" src="assets/img/foto3.jpg" alt="foto" />
-              <div class="carousel-caption">
-                <span></span>
-                <h4 class="portada-subtitulo"></h4>
-              </div>
-            </div>
-            <div class="item">
-              <img class="imagenes-Home" src="assets/img/foto4.jpg" alt="foto" />
-              <div class="carousel-caption">
-                <span></span>
-                <h4 class="portada-subtitulo"></h4>
-              </div>
-            </div>
+
+            </ng-template>
+
+
+
+
+
+
           </div>
         </div>
       </div>
